<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/imga"
            />
        <EditText
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/txtId"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            />
        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/txtName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            />
        <EditText
            android:id="@+id/txtSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/txtSalary"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="30dp"
           >
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/btnAdd"
            android:backgroundTint="@color/design_default_color_primary_variant"/>
        <Button
            android:id="@+id/btnView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/btnView"
            android:backgroundTint="@color/material_dynamic_secondary50"
            />
           />
           <Button
               android:id="@+id/btnDelete"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="@string/btnDelete"
               android:backgroundTint="@color/design_default_color_error"/>
           />
       </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
